# Weather_LINE_Bot

./: .gitignore  get_prefectures_dict.py  main.py  main_object.py  mysql_connection.py  prefectures_data.csv  prefectures_en.csv  prefectures_en_add.py  pyproject.toml  render.yaml  requirements.txt
